--- a/css/style.css
+++ b/css/style.css
@@ -5919,16 +5919,16 @@ table {
       width: 100%; }
       .product_minimum_info__area_power .area {
         float: left; }
-        .product_minimum_info__area_power .area p {
+        .product_minimum_info__area_power .area .name {
           display: block;
           font: 10px/16px 'robotoregular';
           color: rgba(0, 0, 0, 0.7); }
-        .product_minimum_info__area_power .area h4 {
+        .product_minimum_info__area_power .area .namber {
           display: block;
           font: 16px/16px 'robotoBlack';
           color: #662211;
           margin-top: 3px; }
-          .product_minimum_info__area_power .area h4 span {
+          .product_minimum_info__area_power .area .namber span {
             font: 12px/16px Georgia;
             font-style: italic;
             font-weight: bold; }
@@ -5984,18 +5984,18 @@ table {
         width: 45.76%; }
         .product_minimum_info__name_price .price .micro_plice {
           display: none; }
-        .product_minimum_info__name_price .price p {
+        .product_minimum_info__name_price .price .name {
           font: 10px/22px 'robotoregular';
           color: rgba(0, 0, 0, 0.7); }
-        .product_minimum_info__name_price .price h4 {
+        .product_minimum_info__name_price .price .rub {
           font: 19px/16px 'robotoBlack';
           color: #b41600; }
-          .product_minimum_info__name_price .price h4 span {
+          .product_minimum_info__name_price .price .rub span {
             font: 13px/16px Georgia;
             font-style: italic;
             font-weight: bold;
             color: #662211; }
-        .product_minimum_info__name_price .price h5 {
+        .product_minimum_info__name_price .price .dollar {
           font: 14px/16px 'robotoregular';
           color: #888888;
           margin-top: 5px; }
@@ -6742,16 +6742,16 @@ table {
               width: 100%; }
               .section_product_wrap_slider_block .slide_minimum_info__area_power .area {
                 float: left; }
-                .section_product_wrap_slider_block .slide_minimum_info__area_power .area p {
+                .section_product_wrap_slider_block .slide_minimum_info__area_power .area .name {
                   display: block;
                   font: 10px/16px 'robotoregular';
                   color: rgba(0, 0, 0, 0.7); }
-                .section_product_wrap_slider_block .slide_minimum_info__area_power .area h4 {
+                .section_product_wrap_slider_block .slide_minimum_info__area_power .area .namber {
                   display: block;
                   font: 16px/16px 'robotoBlack';
                   color: #662211;
                   margin-top: 3px; }
-                  .section_product_wrap_slider_block .slide_minimum_info__area_power .area h4 span {
+                  .section_product_wrap_slider_block .slide_minimum_info__area_power .area .namber span {
                     font: 12px/16px Georgia;
                     font-style: italic;
                     font-weight: bold; }
@@ -6808,18 +6808,18 @@ table {
                 width: 45.76%; }
                 .section_product_wrap_slider_block .slide_minimum_info__name_price .price .micro_plice {
                   display: none; }
-                .section_product_wrap_slider_block .slide_minimum_info__name_price .price p {
+                .section_product_wrap_slider_block .slide_minimum_info__name_price .price .name {
                   font: 10px/22px 'robotoregular';
                   color: rgba(0, 0, 0, 0.7); }
-                .section_product_wrap_slider_block .slide_minimum_info__name_price .price h4 {
+                .section_product_wrap_slider_block .slide_minimum_info__name_price .price .rub {
                   font: 19px/16px 'robotoBlack';
                   color: #b41600; }
-                  .section_product_wrap_slider_block .slide_minimum_info__name_price .price h4 span {
+                  .section_product_wrap_slider_block .slide_minimum_info__name_price .price .rub span {
                     font: 13px/16px Georgia;
                     font-style: italic;
                     font-weight: bold;
                     color: #662211; }
-                .section_product_wrap_slider_block .slide_minimum_info__name_price .price h5 {
+                .section_product_wrap_slider_block .slide_minimum_info__name_price .price .dollar {
                   font: 14px/16px 'robotoregular';
                   color: #888888;
                   margin-top: 5px; }
